1.app 更新 plugin移植ucloud

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,7 +129,7 @@ android {
 //    rootProject.ext.minSdkVersion
     defaultConfig {
         applicationId "com.ucloud_demo"
-        minSdkVersion 21
+        minSdkVersion 16
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
@@ -183,7 +183,7 @@ repositories {
     }
 }
 dependencies {
-    implementation project(':react-native-ucloud-rtc')
+    implementation project(':react-native-urtc')
 //    implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 //    implementation fileTree(dir: "libs", include: ["*.jar","*.aar"])
