--- a/android/local.properties
+++ b/android/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 21 18:10:09 CST 2021
-sdk.dir=D\:\\ciel\\tools\\androidsdk
+#Thu Feb 11 01:37:00 CST 2021
+sdk.dir=D\:\\tools\\androidsdk
